RESOLVED FIXED183584
Ignore some deprecation warnings encountered when compiling with newer versions of ICU
https://bugs.webkit.org/show_bug.cgi?id=183584
Summary Ignore some deprecation warnings encountered when compiling with newer versio...
Blaze Burg
Reported 2018-03-12 16:28:22 PDT
.
Attachments
Patch (4.21 KB, patch)
2018-03-12 16:32 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2018-03-12 16:28:42 PDT
Blaze Burg
Comment 2 2018-03-12 16:32:54 PDT
Blaze Burg
Comment 3 2018-03-12 16:33:36 PDT
Reviewed offline by dbates.
Myles C. Maxfield
Comment 4 2018-03-12 16:37:12 PDT
Comment on attachment 335662 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=335662&action=review > Source/WebCore/editing/TextIterator.cpp:2004 > +#pragma clang diagnostic ignored "-Wdeprecated-declarations" Usually we do this around each individual call. > Source/WebCore/platform/graphics/SurrogatePairAwareTextIterator.cpp:74 > +#pragma clang diagnostic ignored "-Wdeprecated-declarations" Ditto. > Source/WebCore/platform/text/TextEncoding.cpp:74 > +#pragma clang diagnostic ignored "-Wdeprecated-declarations" Ditto.
Blaze Burg
Comment 5 2018-03-12 16:46:11 PDT
mitz
Comment 6 2018-03-12 16:54:29 PDT
Please just bug 183355 already.
Note You need to log in before you can comment on or make changes to this bug.