Ignore some deprecation warnings encountered when compiling with newer versions of ICU https://bugs.webkit.org/show_bug.cgi?id=183584 <rdar://problem/38395317>

Reviewed by Daniel Bates.

Ignore new deprecation warnings. Where a function has more than one
deprecation warning, mark out the entire function so it remains readable.

* editing/TextIterator.cpp:
* platform/graphics/SurrogatePairAwareTextIterator.cpp:
(WebCore::SurrogatePairAwareTextIterator::normalizeVoicingMarks):
* platform/text/TextEncoding.cpp:

Canonical link: https://commits.webkit.org/199251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229564 268f45cc-cd09-0410-ab3c-d52691b4dbfc