Source/WebCore/editing/TextIterator.cpp
@@ -1999,6 +1999,12 @@ static inline bool containsKanaLetters(const String& pattern)
     return false;
 }
 
+#if COMPILER(CLANG)
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
+#endif
+// NOTE: ICU's unorm_normalize function is deprecated in some SDKs.
+
 static void normalizeCharacters(const UChar* characters, unsigned length, Vector<UChar>& buffer)
 {
     ASSERT(length);
@@ -2019,6 +2025,10 @@ static void normalizeCharacters(const UChar* characters, unsigned length, Vector
     unorm_normalize(characters, length, UNORM_NFC, 0, buffer.data(), bufferSize, &status);
     ASSERT(status == U_STRING_NOT_TERMINATED_WARNING);
 }
+
+#if COMPILER(CLANG)
+#pragma clang diagnostic pop
+#endif
 
 static bool isNonLatin1Separator(UChar32 character)
 {
